--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -95,7 +95,7 @@ jobs:
         - name: Commit and push changes
           run: |
             git config --global user.email "kvsc999@gmail.com"
-            git config --global user.name "Sandeep Kaza"
+            git config --global user.name "kvsc999"
             git add kubernetes/productcatalog/deploy.yaml
             git commit -m "[CI]: Update product catalog image tag"
             git push origin HEAD:main -f
