--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -92,13 +92,17 @@ jobs:
           run: | 
                sed -i "s|image: .*|image: ${{ secrets.DOCKER_USERNAME }}/product-catalog:${{github.run_id}}|" kubernetes/productcatalog/deploy.yaml
         
-        - name: Commit and push changes
-          run: |
-            git config --global user.email "kvsc999@gmail.com"
-            git config --global user.name "kvsc999"
-            git add kubernetes/productcatalog/deploy.yaml
-            git commit -m "[CI]: Update product catalog image tag"
-            git push origin HEAD:main -f
+        - name: Commit and push updated manifest
+      run: |
+        git config --global user.email "kvsc999@gmail.com"
+        git config --global user.name "kvsc999"
+
+        # Pull remote changes to avoid non-fast-forward error
+        git pull origin main --rebase
+
+        git add kubernetes/productcatalog/deploy.yaml
+        git commit -m "[CI]: Update product catalog image tag"
+        git push origin HEAD:main
 
         
         
